bug(Card): todo's dont drag and drop on mobile

--- a/src/Card.scss
+++ b/src/Card.scss
@@ -6,6 +6,7 @@
     padding: 0.5em 0;
     position: relative;
     font-size: 1.2em;
+    cursor: move;
     .todoContent {
         min-height: 2.5em;
         min-width: 15em;
